--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-mde": "11.5.0",
+    "showdown": "1.9.1",
+    "react-split": "2.0.13",
+    "nanoid": "3.1.28",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
